--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,83 +1,139 @@
+
+
 {{ define "main" }}
-
-<article class="post-20 page type-page status-publish has-post-thumbnail hentry" id="post-20">
-  {{ with .Site.Params.banner.heading }}
-  <header class="entry-header has-text-align-center header-footer-group">
-    <div class="entry-header-inner section-inner medium">
-      <h1 class="entry-title">{{ . | markdownify }}</h1>
-    </div>
-  </header>
-  {{ end }}
-
-  {{ with.Site.Params.banner.image}}
-  <figure class="featured-media">
-    <div class="featured-media-inner section-inner">
-      <img width="1200" height="769" src="{{ . | absURL }}"
-        class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt=""
-        sizes="(max-width: 1200px) 100vw, 1200px" />
-    </div>
-  </figure>
-  {{end}}
-
-  <div class="post-inner thin">
-    <div class="entry-content">
-      {{ with .Site.Params.blog.heading }}
-      <div class="wp-block-group alignwide">
-        <div class="wp-block-group__inner-container">
-          <h2 class="has-text-align-center">{{ . | markdownify }}</h2>
-        </div>
+<article
+   class="post-20 page type-page status-publish has-post-thumbnail hentry"
+   id="post-20"
+   >
+   {{ with .Site.Params.banner.heading }}
+   <header class="entry-header has-text-align-center header-footer-group">
+      <div class="entry-header-inner section-inner medium">
+         <h1 class="entry-title">{{ . | $.Page.RenderString }}</h1>
       </div>
-      {{ end }}
-      <div class="wp-block-columns columns alignwide">
-        {{ range (where .Site.RegularPages "Section" "blog")}}
-        <div class="column">
-          <div class="wp-block-group">
+   </header>
+   {{ end }} {{ with.Site.Params.banner.image}}
+   <figure class="featured-media">
+      <div class="featured-media-inner section-inner">
+         <img
+            src="{{ . | absURL }}"
+            class="attachment-post-thumbnail size-post-thumbnail wp-post-image"
+            alt=""
+            />
+      </div>
+   </figure>
+   {{end}} {{ if .Site.Params.call_to_action.enable }} {{
+   with.Site.Params.call_to_action }}
+   <div
+      class="wp-block-group alignwide has-background space-top"
+      style="background-color: #ffffff"
+      >
+      <div class="wp-block-group__inner-container">
+         <div class="wp-block-group">
             <div class="wp-block-group__inner-container">
-              <figure class="wp-block-image alignfull size-full"><img src="{{ .Params.Image |absURL }}"
-                  alt="{{.Title }}" class="wp-image-37" /></figure>
-              <h3>{{ .Title }}</h3>
-              <p>{{ .PublishDate.Format "January 02, 2006"}}</p>
-              <div class="wp-block-button is-style-outline"><a class="wp-block-button__link"
-                  href="{{ .Permalink }}">Read More</a></div>
+               <h2 class="has-text-align-center">
+                  {{ .title | $.Page.RenderString }}
+               </h2>
+               {{ range $paragraph := split .content "\n" }}
+               <p class="has-text-align-center">
+                  {{ $paragraph | $.Page.RenderString }}
+               </p>
+               {{ end }}
+               <div class="wp-block-button aligncenter">
+                  <a class="wp-block-button__link" href="{{ .button_url | absURL }}"
+                     >{{ .button_label }}</a
+                     >
+               </div>
             </div>
-          </div>
-        </div>
-        {{ end }}
+         </div>
       </div>
-
-      {{ if .Site.Params.call_to_action.enable }}
-      {{ with .Site.Params.call_to_action }}
-      <div class="wp-block-group alignwide has-background" style="background-color:#ffffff">
-        <div class="wp-block-group__inner-container">
-          <div class="wp-block-group">
+   </div>
+   {{ end }} {{ end }}
+   <div class="post-inner thin">
+      <div class="entry-content">
+         {{ with .Site.Params.analysis.heading }}
+         <div class="wp-block-group alignwide">
             <div class="wp-block-group__inner-container">
-              <h2 class="has-text-align-center">{{ .title | markdownify }}</h2>
-              <p class="has-text-align-center">{{ .content | markdownify }}</p>
-              <div class="wp-block-button aligncenter"><a class="wp-block-button__link"
-                  href="{{ .button_url | absURL }}">{{ .button_label }}</a></div>
+               <h2 class="has-text-align-center">{{ . | $.Page.RenderString }}</h2>
             </div>
-          </div>
-        </div>
+         </div>
+         {{ end }}
+         <div class="wp-block-columns columns alignwide">
+            {{ range (where .Site.RegularPages "Section" "analysis")}}
+            <div class="column">
+               <div class="wp-block-group">
+                  <div class="wp-block-group__inner-container">
+                     <figure class="wp-block-image alignfull size-full bg-white">
+                        <img
+                           src="{{ .Params.Image |absURL }}"
+                           alt="{{.Title }}"
+                           class="wp-image-37"
+                           />
+                     </figure>
+                     <h3>{{ .Title }}</h3>
+                     <div class="wp-block-button is-style-outline">
+                        <a
+                           class="wp-block-button__link bg-white"
+                           href="{{ .Params.url }}"
+                           >Read More</a
+                           >
+                     </div>
+                  </div>
+               </div>
+            </div>
+            {{ end }}
+         </div>
+         {{ if .Site.Params.gallery.enable }} {{ with.Site.Params.gallery }}
+         <h1 class="title">Gallery</h1>
+         <div id="originals">
+            <h2 class="title">Originals</h2>
+            <figure class="wp-block-gallery alignwide columns is-cropped">
+               <ul class="blocks-gallery-grid">
+                  {{ range .gallery_item_original }}
+                  <li class="blocks-gallery-item">
+                     <figure>
+                        <div class="overlay">{{ .title }}</div>
+                        <img src="{{ .image | absURL }}" />
+                     </figure>
+                  </li>
+                  {{ end }}
+               </ul>
+            </figure>
+         </div>
+         <div id="copies">
+            <h2 class="title">Copies</h2>
+            <figure class="wp-block-gallery alignwide columns is-cropped">
+               <ul class="blocks-gallery-grid">
+                  {{ range .gallery_item_copy }}
+                  <li class="blocks-gallery-item">
+                     <figure>
+                        <div class="overlay">{{ .title }}</div>
+                        <img src="{{ .image | absURL }}" />
+                     </figure>
+                  </li>
+                  {{ end }}
+               </ul>
+            </figure>
+         </div>
+         <div id="response">
+            <h2 class="title">Response</h2>
+            <figure class="wp-block-gallery alignwide columns is-cropped">
+               <ul class="blocks-gallery-grid">
+                  {{ range .gallery_item_response }}
+                  <li class="blocks-gallery-item">
+                     <figure>
+                        <div class="overlay">{{ .title }}</div>
+                        <img src="{{ .image | absURL }}" />
+                     </figure>
+                  </li>
+                  {{ end }}
+               </ul>
+            </figure>
+         </div>
+         {{ end }} {{ end }}
       </div>
-      {{ end }}
-      {{ end }}
-
-      
-      {{ if .Site.Params.gallery.enable }}
-      {{ with .Site.Params.gallery }}
-      <figure class="wp-block-gallery alignwide columns-2 is-cropped">
-        <ul class="blocks-gallery-grid">
-          {{ range .gallery_item }}
-          <li class="blocks-gallery-item">
-            <figure><img src="{{ .image | absURL }}"/></figure>
-          </li>
-          {{ end }}
-        </ul>
-      </figure>
-      {{ end }}
-      {{ end }}
-    </div><!-- .entry-content -->
-  </div><!-- .post-inner -->
+      <!-- .entry-content -->
+   </div>
+   <!-- .post-inner -->
 </article>
-
 {{ end }}
+
