--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,25 +7,16 @@
     </div><!-- .footer-top -->
     {{ with .Site.Params.footer }}
     <aside class="footer-widgets-outer-wrapper" role="complementary">
-      <div class="footer-widgets-wrapper">
-        <div class="footer-widgets column-one grid-item">
+      <div class="footer-widgets-wrapper jc-c">
+        <div class="footer-widgets has-text-align-center">
           <div class="widget widget_text">
             <div class="widget-content">
-              <h2 class="widget-title subheading heading-size-3">{{ .title | markdownify }}</h2>
-              <div class="textwidget">
-                <p>{{ .content | markdownify }}</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-widgets column-two grid-item">
-          <div class="widget widget_text">
-            <div class="widget-content">
-              <h2 class="widget-title subheading heading-size-3">Find Us</h2>
-              <div class="textwidget">
-                <p><strong>Address</strong><br/> {{ .address | markdownify }}</p>
-                <p><strong>Hours</strong><br/>{{ .hours | markdownify }}</p>
-              </div>
+              <h2 class="widget-title subheading heading-size-3">{{ .title | $.Page.RenderString }}</h2>
+              {{ range $content := split .content " \n " }} 
+                <div class="textwidget">
+                 <p>{{ $content | $.Page.RenderString }}</p>
+                </div>
+              {{ end }}
             </div>
           </div>
         </div>
@@ -41,7 +32,7 @@
 <footer id="site-footer" role="contentinfo" class="header-footer-group">
   <div class="section-inner">
     <div class="footer-credits">
-      <p class="footer-copyright">{{ .Site.Params.footer.copyright | markdownify }}</p><!-- .powered-by-wordpress -->
+      <p class="footer-copyright">{{ .Site.Params.footer.copyright | $.Page.RenderString }} - {{ now.Year }}</p><!-- .powered-by-wordpress -->
     </div><!-- .footer-credits -->
     <a class="to-the-top" href="#site-header">
       <span class="to-the-top-long">
@@ -52,65 +43,5 @@
   </div><!-- .section-inner -->
 </footer>
 
-
-{{ "<!-- Search index -->" | safeHTML }}
-<script>
-  var indexURL = {{"index.json" | absURL}}
-</script>
-
-<!-- jquery -->
-{{ $jquery := resources.Get "js/jquery.min.js" | minify}}
-<script src="{{ $jquery.Permalink }}"></script>
-
 {{ $script := resources.Get "js/script.js" | minify}}
 <script src="{{ $script.Permalink }}"></script>
-
-{{ "<!-- Main Script -->" | safeHTML }}
-{{ $search := resources.Get "js/search.js" | minify}}
-<script src="{{ $search.Permalink }}"></script>
-
-<script src="{{`plugins/search.js` | absURL }}"></script>
-
-
-<!-- cookie -->
-{{ if site.Params.cookies.enable }}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
-<div id="js-cookie-box" class="cookie-box cookie-box-hide">
-	This site uses cookies. By continuing to use this website, you agree to their use. <span id="js-cookie-button" class="wp-block-button__link" style="margin-left: 10px;">I Accept</span>
-</div>
-<script>
-	(function ($) {
-		const cookieBox = document.getElementById('js-cookie-box');
-		const cookieButton = document.getElementById('js-cookie-button');
-		if (!Cookies.get('cookie-box')) {
-			cookieBox.classList.remove('cookie-box-hide');
-			cookieButton.onclick = function () {
-				Cookies.set('cookie-box', true, {
-					expires: {{ site.Params.cookies.expire_days }}
-				});
-				cookieBox.classList.add('cookie-box-hide');
-			};
-		}
-	})(jQuery);
-</script>
-
-<!-- cookie style -->
-<style>
-.cookie-box {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: center;
-  z-index: 9999;
-  padding: 1rem 2rem;
-  background: rgb(71, 71, 71);
-  transition: all .75s cubic-bezier(.19, 1, .22, 1);
-  color: #fdfdfd;
-}
-
-.cookie-box-hide {
-  display: none;
-}
-</style>
-{{ end }}
