--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,30 +1,40 @@
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>{{ .Title }}</title>
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="{{ with .Params.Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
-  {{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
-  {{ hugo.Generator }}
-  
-
-  {{ "<!-- Main Stylesheet -->" | safeHTML }}
-  {{ $wpLibrary := resources.Get "css/wp-library.css" | minify }}
-  <link rel="stylesheet" href="{{ $wpLibrary.Permalink }}" media="screen">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="description"
+    content="{{ with .Params.Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}"
+  />
+  {{ with .Site.Params.author }}
+  <meta name="author" content="{{ . }}" />
+  {{ end }} {{ hugo.Generator }} {{ "<!-- Main Stylesheet -->" | safeHTML }} 
+  {{ $wpLibrary := resources.Get "css/wp-library.css" | minify}}
+  <link rel="stylesheet" href="{{ $wpLibrary.Permalink }}" media="screen" />
 
   {{ $style := resources.Get "css/style.css" | minify }}
-  <link rel="stylesheet" href="{{ $style.Permalink }}" media="screen">
+  <link rel="stylesheet" href="{{ $style.Permalink }}" media="screen" />
 
-  {{ $customStyle := resources.Get "css/custom-style.css" | minify }}
-  <link rel="stylesheet" href="{{ $customStyle.Permalink }}" media="screen">
+  {{ $customStyle := resources.Get "css/custom-style.scss" | resources.ToCSS | minify }}
+  <link rel="stylesheet" href="{{ $customStyle.Permalink }}" media="screen" />
 
   {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
-  <link rel="icon" href="{{ `images/favicon.png` | absURL }}" type="image/x-icon">
+  <link
+    rel="shortcut icon"
+    href="{{ `images/favicon.png` | absURL }}"
+    type="image/x-icon"
+  />
+  <link
+    rel="icon"
+    href="{{ `images/favicon.png` | absURL }}"
+    type="image/x-icon"
+  />
 
   <script>
-		document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+    document.documentElement.className =
+      document.documentElement.className.replace("no-js", "js");
   </script>
 
   <!-- google analytics -->
